[project]
name = "ppo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax==0.4.20",
    "jaxlib==0.4.20",
    "numpy>=1.24.0,<2.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "mujoco>=3.1.0",
    "gymnasium[mujoco]>=1.0.0",
]
